--- a/views/mainLayout.ejs
+++ b/views/mainLayout.ejs
@@ -20,7 +20,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/jumbotron/jumbotron.css" rel="stylesheet">
+    <link href="/css/jumbotron.css" rel="stylesheet">
 
   </head>
 
