--- a/views/main/message.ejs
+++ b/views/main/message.ejs
@@ -167,12 +167,13 @@
 
 
 	<!-- scripts -->
-	<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+	<script src="/js/jquery.min.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/js/socket/io.js"></script>
 	<script type="text/javascript">
 		$('#chatMsgs').scrollTop($('#chatMsgs')[0].scrollHeight);
 	</script>
+
 
 </body>
 </html>
