Changed alot of stuff

--- a/views/teacherPartials/javascript.ejs
+++ b/views/teacherPartials/javascript.ejs
@@ -14,3 +14,4 @@
 <script src="/js/custom.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/socket/io.js"></script>
+<script src="/js/socket/custom.js"></script>
