--- a/views/teacher/single-teacher-course.ejs
+++ b/views/teacher/single-teacher-course.ejs
@@ -4,7 +4,7 @@
     <div class="x_panel">
       <div class="x_title">
         <h2>Enrolled Students </h2>
-
+        <input type="hidden" id="courseId" value="<%= course._id %>">
         <div class="clearfix"></div>
       </div>
       <div class="x_content">
@@ -14,14 +14,17 @@
               <th>Email</th>
               <th>Name</th>
               <th>Chat</th>
+              <th>Certificates</th>
             </tr>
           </thead>
           <tbody>
             <% for (var i = 0; i < course.ownByStudent.length; i++) {%>
             <tr>
+              <input type="hidden" id="<%= course.ownByStudent[i].user._id%>">
               <td><%= course.ownByStudent[i].user.email %></td>
               <td><%= course.ownByStudent[i].user.profile.name %></td>
               <td><a href="/message/<%= course.ownByStudent[i].user._id%>" class="btn btn-primary">Message</a></td>
+              <td><button id="<%= course.ownByStudent[i].user._id%>" class="btn btn-success buttonClass">Give Certificate</button></td>
             </tr>
             <% } %>
           </tbody>
