--- a/views/teacherPartials/sidebar.ejs
+++ b/views/teacherPartials/sidebar.ejs
@@ -2,7 +2,7 @@
 <div class="col-md-3 left_col">
   <div class="left_col scroll-view">
     <div class="navbar nav_title" style="border: 0;">
-      <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Xkyler</span></a>
+      <a href="/" class="site_title"><i class="fa fa-paw"></i> <span>Xkyler</span></a>
     </div>
 
     <div class="clearfix"></div>
@@ -31,8 +31,6 @@
               <li><a href="/teacher/dashboard">Dashboard</a>
               </li>
               <li><a href="/teacher/profile">Profile</a>
-              </li>
-              <li><a href="/teacher/inbox">Inbox</a>
               </li>
               <li><a href="/teacher/calendar">Calendar</a>
               </li>
