Added lecture's name

--- a/views/student/single-student-course.ejs
+++ b/views/student/single-student-course.ejs
@@ -18,7 +18,7 @@
                             <td>
 
                             </td>
-                            <td>Lectures</td>
+                            <td><%= course.files[i].name %></td>
                             <td class="td-actions ">
                               <a href="<%= course.files[i].fileUrl %>">URL</a>
                             </td>
